--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <li><div class="sileo"> <a href="sileo://source/***"><button class="sileobtn">SILEO</button> </a></div></li>
 
-<li><div class="zebra"><a href="zbra://sources/add/***/"><button class="zebrabtn">ZEBRA</button> </a></div></li>
+<li><div class="instagram"><a href="instagram://sources/add/https://www.instagram.com/6.wwq//"><button class="zebrabtn">INSTAGRAM</button> </a></div></li>
 
 </ul></div>
 </body>
