--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 <h1>اR&R </h1>
 <div ><img src="CydiaIcon.png" alt="" style="width:100px"; > </div>
 
+<div class="name"><p>https://www.instagram.com/6.wwq/</p></div>
+
+<div><ul class="btns">
+
+<li><div class="cydia"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=***"><button class="cydiabtn">CYDIA</button></a></div></li>
+
+<li><div class="sileo"> <a href="sileo://source/***"><button class="sileobtn">SILEO</button> </a></div></li>
+
+</ul></div>
+</body>
+</html>
+
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title> http://r.github.io/</title>
+</head>
+<body>
+<h1>اR&R </h1>
+<div ><img src="CydiaIcon.png" alt="" style="width:100px"; > </div>
+
 <div class="name"><p>وصف السورس</p></div>
 
 <div><ul class="btns">
